# discalendar-next-v2-bot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  discord-bot-implementation.md  docker-compose.yml  env.example  lightsail_ed25519  lightsail_ed25519.pub  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: format_scripts.sh  lint_scripts.sh
.cursor/rules/: python.mdc
.github/workflows/: terraform-apply.yml
docs/: deployment.md  manual-test-cases.md
scripts/: deploy.sh
src/: __init__.py  bot.py  config.py  main.py
src/commands/: create.py  help.py  init.py  invite.py  list_cmd.py
src/events/: guild.py
src/models/: __init__.py  event.py  guild.py
src/services/: __init__.py  event_service.py  guild_service.py
src/tasks/: notify.py  presence.py
src/utils/: __init__.py  datetime.py  embeds.py  permissions.py
terraform/: .gitignore  backend.tf  cloudwatch.tf  iam.tf  lightsail.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  user_data.sh  variables.tf
tests/: __init__.py  conftest.py
tests/commands/: test_create.py  test_help.py  test_init.py  test_invite.py  test_list_cmd.py
tests/events/: __init__.py  test_guild.py
tests/services/: test_event_service.py  test_guild_service.py
tests/tasks/: test_notify.py  test_presence.py
tests/utils/: test_datetime.py  test_embeds.py  test_permissions.py
